# estate-executor

./: .env.example  .gitignore  LOCAL_SETUP.md  Makefile  SECURITY_PENTEST_CHECKLIST.md  docker-compose.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  health.py  milestones.py  monitoring.py  privacy.py  search.py  templates.py  upload.py
backend/app/core/: api_key_auth.py  cache.py  config.py  database.py  dependencies.py  events.py  exceptions.py  logging.py  metrics.py  middleware.py  query_analysis.py  security.py  security_middleware.py  sentry.py
backend/app/models/: __init__.py  ai_feedback.py  ai_usage_logs.py  api_keys.py  asset_documents.py  assets.py  base.py  communications.py  deadlines.py  distributions.py  document_requests.py  document_versions.py  documents.py  email_logs.py  entities.py  entity_assets.py  enums.py  events.py  firm_memberships.py  firms.py  integration_connections.py  matters.py  privacy_requests.py  signature_requests.py  sso_configs.py  stakeholders.py  subscriptions.py  task_comments.py  task_dependencies.py  task_documents.py  tasks.py  time_entries.py  users.py  webhooks.py
backend/app/prompts/: __init__.py  anomaly.py  classification.py  extraction.py  letter.py  suggestion.py  trust_analysis.py
backend/app/realtime/: __init__.py  publisher.py  server.py  subscriber.py
backend/app/schemas/: __init__.py  ai.py  api_keys.py  assets.py  auth.py  billing.py  common.py  communications.py  deadlines.py  distributions.py  documents.py  docusign.py  entities.py  events.py  firms.py  integrations.py  matters.py  portal.py  privacy.py  search.py  sso.py  stakeholders.py  tasks.py  time_tracking.py  webhooks.py
backend/app/services/: ai_anomaly_service.py  ai_classification_service.py  ai_extraction_service.py  ai_feedback_service.py  ai_letter_service.py  ai_rate_limiter.py  ai_suggestion_service.py  ai_trust_analysis_service.py  ai_usage_service.py  alerting_service.py  api_key_rate_limiter.py  api_key_service.py  asset_service.py  billing_service.py  branding_service.py  clio_client.py  clio_sync_service.py  communication_service.py  deadline_service.py  distribution_service.py  document_service.py  docusign_client.py  docusign_service.py  email_service.py  entity_service.py  event_service.py  firm_service.py  matter_service.py  milestone_service.py  portal_service.py  privacy_service.py  quickbooks_client.py  quickbooks_sync_service.py  rate_limiter.py  report_service.py  search_service.py  sso_service.py  stakeholder_service.py  storage_service.py  task_generation_service.py  (+5 more)
backend/app/templates/: base_tasks.yaml  conservatorship.yaml  intestate_probate.yaml  mixed_probate_trust.yaml  testate_probate.yaml  trust_administration.yaml
backend/app/templates/emails/: base.html  deadline_missed.html  deadline_reminder.html  distribution_notice.html  document_request.html  document_upload_complete.html  task_assigned.html  (+3 more)
backend/app/workers/: ai_tasks.py  celery_app.py  deadline_tasks.py  document_tasks.py  notification_tasks.py  privacy_tasks.py  report_tasks.py  tasks.py
backend/migrations/: env.py
backend/migrations/versions/: 15ca5130e6b6_initial_models.py  a1b2c3d4e5f6_add_task_comments.py  b2c3d4e5f6a7_add_email_logs.py  c3d4e5f6a7b8_add_ai_usage_logs.py  d4e5f6a7b8c9_add_ai_feedback.py  e5f6a7b8c9d0_add_distributions.py  f6a7b8c9d0e1_add_document_requests.py  g7b8c9d0e1f2_add_dispute_resolution_fields.py  h8c9d0e1f2g3_add_time_entries.py  i9d0e1f2g3h4_add_subscriptions.py  j0e1f2g3h4i5_add_integration_connections.py  k1f2g3h4i5j6_add_signature_requests.py  l2g3h4i5j6k7_add_sso_configs.py  m3h4i5j6k7l8_add_api_keys_webhooks.py  n4i5j6k7l8m9_add_full_text_search.py  o5j6k7l8m9n0_add_privacy_requests.py  p6k7l8m9n0o1_add_performance_indexes_matviews.py
backend/tests/: factories.py  test_health.py
backend/tests/integration/: conftest.py  test_beneficiary_flow.py  test_deadline_monitoring.py  test_document_api.py  test_matter_api.py  test_multi_tenancy.py  test_permissions.py  test_permissions_api.py  test_task_api.py
backend/tests/unit/: test_ai_anomaly_service.py  test_ai_classification_service.py  test_ai_extraction_service.py  test_ai_feedback.py  test_ai_graceful_degradation.py  test_ai_letter_service.py  test_ai_pipeline_classification.py  test_ai_pipeline_errors.py  test_ai_pipeline_extraction.py  test_ai_pipeline_integration.py  test_ai_rate_limiter.py  test_ai_suggestion_service.py  test_ai_trust_analysis.py  test_ai_usage_log.py  test_ai_usage_service.py  test_api_keys_webhooks.py  test_asset_service.py  test_billing_service.py  test_branding_service.py  test_cache.py  test_celery_infrastructure.py  test_clio_integration.py  test_communication_service.py  test_deadline_service.py  test_dispute_resolution.py  test_distribution_service.py  test_document_request_workflow.py  test_document_service.py  test_docusign_integration.py  test_email_service.py  test_entity_service.py  test_event_service.py  test_matter_service.py  test_milestone_detection.py  test_monitoring.py  test_portal_service.py  test_portfolio.py  test_privacy_service.py  test_prompt_optimization.py  test_quickbooks_integration.py  (+12 more)
(+295 files in other folders)
