[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "estate-executor-api"
version = "0.1.0"
description = "Estate Executor OS — Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "PyJWT[crypto]>=2.8.0",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "boto3>=1.35.0",
    "anthropic>=0.94.0",
    "resend>=2.0.0",
    "stripe>=11.0.0",
    "python-multipart>=0.0.17",
    "pydantic-extra-types>=2.10.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "python-socketio>=5.11.0",
    "reportlab>=4.0",
    "openpyxl>=3.1.0",
    "cachetools>=5.3.0",
    "PyMuPDF>=1.24.0",
    "pytesseract>=0.3.10",
    "python-docx>=1.1.0",
    "sentry-sdk[fastapi,celery,sqlalchemy]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["B008"]  # Allow Depends() / Query() in FastAPI parameter defaults

[tool.ruff.lint.per-file-ignores]
"app/models/*.py" = ["TCH003", "TC003"]
"app/schemas/*.py" = ["TC001", "TC002", "TC003", "TCH001", "TCH002", "TCH003"]
"app/api/v1/*/__init__.py" = ["TC001", "TC002", "TC003", "TCH001", "TCH002", "TCH003"]
"migrations/versions/*.py" = ["E501"]
"app/prompts/*.py" = ["E501"]
"app/services/ai_*.py" = ["E501"]
"tests/unit/test_ai_*.py" = ["E501", "B017"]
"tests/unit/test_prompt_*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "boto3.*",
    "botocore.*",
    "socketio.*",
    "jwt.*",
    "resend.*",
    "yaml.*",
    "cachetools.*",
    "reportlab.*",
    "openpyxl.*",
    "redis.*",
    "fitz.*",
    "pytesseract.*",
    "docx.*",
    "PIL.*",
    "anthropic.*",
    "sentry_sdk.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "app.realtime.publisher",
    "app.realtime.subscriber",
    "app.services.report_service",
    "app.services.email_service",
    "app.services.text_extraction_service",
    "app.services.ai_classification_service",
    "app.services.ai_rate_limiter",
    "app.services.ai_extraction_service",
    "app.services.ai_letter_service",
    "app.services.ai_suggestion_service",
    "app.services.ai_anomaly_service",
    "app.services.ai_trust_analysis_service",
    "app.workers.ai_tasks",
    "app.core.sentry",
    "app.services.alerting_service",
]
disallow_untyped_calls = false
warn_return_any = false
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
